[tool.poetry]
name = "django3-password-generator"
version = "0.1.0"
description = ""
authors = ["Dmytro Korzhov <dmytro.korzhov@gmail.com>"]
readme = "README.md"
packages = [{include = "django3_password_generator"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
